fix menu on iphone

--- a/src/styles/blocks/navbar.styl
+++ b/src/styles/blocks/navbar.styl
@@ -16,7 +16,7 @@
 .navbar__menu
   display: block
   float: left
-  font-size: 14px
+  font-size: 12px
   ul
     padding: 0
     li
